neurarErrors
GameRendering.cpp: In member function ‘void GameRendering::mainLoop()’:
GameRendering.cpp:228:59: error: no matching function for call to ‘std::thread::thread(void())’
         std::thread t(logic.botToTrain.computeHiddenRounds);
                                                           ^
In file included from GameRendering.h:10:0,
                 from GameRendering.cpp:1:
/usr/include/c++/5/thread:133:7: note: candidate: std::thread::thread(_Callable&&, _Args&& ...) [with _Callable = void(); _Args = {}]
       thread(_Callable&& __f, _Args&&... __args)
       ^
/usr/include/c++/5/thread:133:7: note:   no known conversion for argument 1 from ‘void()’ to ‘void (&&)()’
/usr/include/c++/5/thread:128:5: note: candidate: std::thread::thread(std::thread&&)
     thread(thread&& __t) noexcept
     ^
/usr/include/c++/5/thread:128:5: note:   no known conversion for argument 1 from ‘void()’ to ‘std::thread&&’
/usr/include/c++/5/thread:122:5: note: candidate: std::thread::thread()
     thread() noexcept = default;
     ^
/usr/include/c++/5/thread:122:5: note:   candidate expects 0 arguments, 1 provided
